// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Integration: group-layouts fixture > matches snapshot 1`] = `
"@startuml Diagram
skinparam classAttributeIconSize 0

top to bottom direction
skinparam class<<component>> {
  BackgroundColor #4A90D9
}
skinparam class<<derived>> {
  BackgroundColor #9B59B6
}
skinparam class<<endpoint>> {
  BackgroundColor #E74C3C
}
skinparam class<<error-page>> {
  BackgroundColor #C0392B
}
skinparam class<<Exported>> {
  BackgroundColor #95A5A6
}
skinparam class<<function>> {
  BackgroundColor #3498DB
}
skinparam class<<layout>> {
  BackgroundColor #2ECC71
}
skinparam class<<LayoutLoad>> {
  BackgroundColor #1ABC9C
}
skinparam class<<page>> {
  BackgroundColor #27AE60
}
skinparam class<<PageLoad>> {
  BackgroundColor #16A085
}
skinparam class<<state>> {
  BackgroundColor #E74C3C
}
skinparam class<<store>> {
  BackgroundColor #E67E22
}
legend right
  |= component |= #4A90D9 |
  |= derived |= #9B59B6 |
  |= endpoint |= #E74C3C |
  |= error-page |= #C0392B |
  |= Exported |= #95A5A6 |
  |= function |= #3498DB |
  |= layout |= #2ECC71 |
  |= LayoutLoad |= #1ABC9C |
  |= page |= #27AE60 |
  |= PageLoad |= #16A085 |
  |= state |= #E74C3C |
  |= store |= #E67E22 |
endlegend

class "+layout" <<component>> {
  + children: unknown
}

class "+layout" <<component>> {
  + children: unknown
}

class "+page" <<component>> {
}

class "+page" <<component>> {
  + data: unknown
}

class "+page" <<component>> {
  + data: unknown
}

class "+page" <<component>> {
}

class "+page" <<component>> {
}

class "UserProfile" <<component>> {
  + userId: unknown
}

class "load" <<function>> <<Exported>> {
}

class "load" <<function>> <<Exported>> {
}

class "+layout" as _layout <<layout>> {
  path: /(app)
  group: app
}

class "+layout" as _layout <<layout>> {
  path: /(auth)
  group: auth
}

class "+page" as _page <<page>> {
  path: /(app)/dashboard
  group: app
}

class "+page" as _page <<page>> {
  path: /(app)/docs/[...slug]
  rest slug
  group: app
}

class "+page" as _page <<page>> {
  path: /(app)/users/[id]
  dynamic id
  group: app
}

class "+page" as _page <<page>> {
  path: /(auth)/login
  group: auth
}

class "+page" as _page <<page>> {
  path: /(auth)/register
  group: auth
}

@enduml"
`;

exports[`Integration: minimal-sveltekit fixture > matches snapshot 1`] = `
"@startuml Diagram
skinparam classAttributeIconSize 0

top to bottom direction
skinparam class<<component>> {
  BackgroundColor #4A90D9
}
skinparam class<<derived>> {
  BackgroundColor #9B59B6
}
skinparam class<<endpoint>> {
  BackgroundColor #E74C3C
}
skinparam class<<error-page>> {
  BackgroundColor #C0392B
}
skinparam class<<Exported>> {
  BackgroundColor #95A5A6
}
skinparam class<<function>> {
  BackgroundColor #3498DB
}
skinparam class<<layout>> {
  BackgroundColor #2ECC71
}
skinparam class<<LayoutLoad>> {
  BackgroundColor #1ABC9C
}
skinparam class<<page>> {
  BackgroundColor #27AE60
}
skinparam class<<PageLoad>> {
  BackgroundColor #16A085
}
skinparam class<<state>> {
  BackgroundColor #E74C3C
}
skinparam class<<store>> {
  BackgroundColor #E67E22
}
legend right
  |= component |= #4A90D9 |
  |= derived |= #9B59B6 |
  |= endpoint |= #E74C3C |
  |= error-page |= #C0392B |
  |= Exported |= #95A5A6 |
  |= function |= #3498DB |
  |= layout |= #2ECC71 |
  |= LayoutLoad |= #1ABC9C |
  |= page |= #27AE60 |
  |= PageLoad |= #16A085 |
  |= state |= #E74C3C |
  |= store |= #E67E22 |
endlegend

class "userStore" <<store>> {
  storeType: writable
  valueType: User | null
}

class "+layout" <<component>> {
  + children: unknown
}

class "+page" <<component>> {
}

class "+page" <<component>> {
}

class "Button" <<component>> {
  + label: unknown
  + onClick: unknown
}

class "clearUser" <<function>> <<Exported>> {
}

class "GET" <<function>> <<Exported>> {
}

class "load" <<function>> <<Exported>> {
}

class "load" <<function>> <<Exported>> {
}

class "POST" <<function>> <<Exported>> {
}

class "setUser" <<function>> <<Exported>> {
}

class "+layout" as _layout <<layout>> {
  path: /
}

class "+page" as _page <<page>> {
  path: /
}

class "+page" as _page <<page>> {
  path: /auth
}

class "+server" as _server <<endpoint>> {
  path: /api/users
}

_page ..> setUser : $userStore <<store-subscription>>
@enduml"
`;

exports[`Integration: svelte-stores fixture > matches snapshot 1`] = `
"@startuml Diagram
skinparam classAttributeIconSize 0

top to bottom direction
skinparam class<<component>> {
  BackgroundColor #4A90D9
}
skinparam class<<derived>> {
  BackgroundColor #9B59B6
}
skinparam class<<endpoint>> {
  BackgroundColor #E74C3C
}
skinparam class<<error-page>> {
  BackgroundColor #C0392B
}
skinparam class<<Exported>> {
  BackgroundColor #95A5A6
}
skinparam class<<function>> {
  BackgroundColor #3498DB
}
skinparam class<<layout>> {
  BackgroundColor #2ECC71
}
skinparam class<<LayoutLoad>> {
  BackgroundColor #1ABC9C
}
skinparam class<<page>> {
  BackgroundColor #27AE60
}
skinparam class<<PageLoad>> {
  BackgroundColor #16A085
}
skinparam class<<state>> {
  BackgroundColor #E74C3C
}
skinparam class<<store>> {
  BackgroundColor #E67E22
}
legend right
  |= component |= #4A90D9 |
  |= derived |= #9B59B6 |
  |= endpoint |= #E74C3C |
  |= error-page |= #C0392B |
  |= Exported |= #95A5A6 |
  |= function |= #3498DB |
  |= layout |= #2ECC71 |
  |= LayoutLoad |= #1ABC9C |
  |= page |= #27AE60 |
  |= PageLoad |= #16A085 |
  |= state |= #E74C3C |
  |= store |= #E67E22 |
endlegend

class "isLoggedIn" <<store>> {
  storeType: derived
  valueType: unknown
}

class "userName" <<store>> {
  storeType: derived
  valueType: unknown
}

class "+page" <<component>> {
}

class "createAuthActions" <<function>> <<Exported>> {
}

class "debounce" <<function>> <<Exported>> {
}

class "formatDate" <<function>> <<Exported>> {
}

class "useCounters" <<function>> <<Exported>> {
}

class "+page" as _page <<page>> {
  path: /
}

createAuthActions ..> src_lib_stores_user_svelte_ts : userStore
useCounters ..> useCounters : counter
_page ..> createAuthActions : $userName <<store-subscription>>
_page ..> createAuthActions : $isLoggedIn <<store-subscription>>
@enduml"
`;
